# emergence-lab

./: .gitignore  AGENTS.md  CLAUDE.md  DASHBOARD-READINESS-REPORT.txt  EXPERIMENT_LOG.md  OVERNIGHT_RESULTS.md  PHASE4B-KAGGLE-INFRASTRUCTURE.md  PHASE5-PROVE-EMERGENCE.md  PHASE6-GRAPH-AND-HARDER-ENVIRONMENTS.md  PRD-PHASE1-COMPLETE.md  PRD-PHASE2-COMPLETE.md  PRD-PHASE4-COMPLETE.md  PRD-PHASE5-COMPLETE.md  PRD.md  PROMPT-PHASE3.md  PROMPT-PHASE4.md  PROMPT.md  README.md  RESEARCH-PHASE4.md  progress-phases-1-4b.txt  progress.txt  pyproject.toml  quick_ablation.py  test_ablation.py  test_ablation_local.py
configs/: default.yaml  phase2.yaml
dashboard/: README.md  index.html  package-lock.json  package.json
docs/: EXPERIMENT_LOG.md  PRODUCT_SWARM_CODE_SCANNER.md  chatgpt_diagnosis_log.md  kaggle-workflow.md
notebooks/: colab_adaptive_gate_demo.ipynb  colab_adaptive_gate_test.ipynb  colab_config_sweep.ipynb  colab_delivery_test.ipynb  colab_field_off_autonomous.ipynb  colab_field_on_vs_off_analysis.ipynb  colab_field_on_vs_off_final.ipynb  colab_hidden_food_analysis.ipynb  colab_hidden_food_specialization_training.ipynb  colab_hidden_food_training.ipynb  colab_nuclear_option.ipynb  colab_overnight_comparison.ipynb  colab_parallel_training.ipynb  colab_pheromone_sweep.ipynb  colab_smart_field_test.ipynb  colab_survival_pressure.ipynb  kaggle_training.ipynb  kernel-metadata.json
reports/: specialization_report.md
reports-cranked/: specialization_report.md
reports-two-stage/: specialization_report.md
scripts/: compute_emergence_metrics.py  generate_multi_seed_report.py  generate_paper_figures.py  generate_specialization_report.py  kaggle_download.sh  kaggle_push.sh  kaggle_run.sh  kaggle_setup.sh  kaggle_status.sh  ralph.sh  run_ablation.py  run_baselines_comparison.py  run_scaling_experiment.py  run_specialization_ablation.py  run_stigmergy_ablation.py  setup.sh  train.sh  verify_phase5.py  verify_specialization_training.py
src/: __init__.py  configs.py
tests/: __init__.py  conftest.py  test_ablation_extended.py  (+33 more)
(+71 files in other folders)
